# agentixlens

./: .gitignore  Dockerfile  README.md  agentixlens.html  client.py  context.py  dashboard.html  exporter.py  index.html  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  tracer.py
backend/: requirements.txt
backend/middleware/: Auth.py
backend/routers/: alerts.py  ingest.py  stats.py  traces.py
db/: database.py
examples/: custom_agent.py
models/: schemas.py
netlify/functions/: broadcast.js  contact.js
sdk/: README.md  pyproject.toml
sdk/agentixlens/: __init__.py  models.py  store.py
sdk/agentixlens/integrations/: langchain.py
tests/: test_tracer.py
