[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "agentixlens"
version         = "0.1.0"
description     = "AI Agent Observability — trace, monitor & debug your AI agents in real-time"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = ["ai", "agents", "observability", "tracing", "llm", "langchain", "autogen"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero required dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
all       = ["langchain>=0.2", "langchain-core>=0.2"]
dev       = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "black",
    "mypy",
    "ruff",
]

[project.urls]
Homepage      = "https://agentixlens.com"
Documentation = "https://docs.agentixlens.com"
Repository    = "https://github.com/agentixlens/agentixlens"
"Bug Tracker" = "https://github.com/agentixlens/agentixlens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentixlens*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
